[package]
name = "proxy-rs"
version = "0.1.0"
authors = ["王跃 <wangyue1@ly.com>"]

[dependencies]
bytes = "0.4"
num_cpus = "1.0"
time = "0.1"

log = "0.3"
log4rs = "0.7"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

futures = "0.1"
futures-cpupool = "0.1"

tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"

hyper = "0.11"
url = "1.4"